corrected vertical alignment

--- a/activities/MediaViewer.activity/css/activity.css
+++ b/activities/MediaViewer.activity/css/activity.css
@@ -10,7 +10,3 @@ body {
     position:absolute;
     display: none;
 }
-
-#EmptyMessage {
-    margin: auto;
-}
